Corrección de errores
Se corrigen los errores, el login funciona correctamente. Se trabaja en las vistas y funcionalidades del dashboard interno.

--- a/Web-LX/Web-LX/Views/Shared/_Layout_Administration.cshtml
+++ b/Web-LX/Web-LX/Views/Shared/_Layout_Administration.cshtml
@@ -159,14 +159,14 @@
 
 
                         <li>
-                            <a href="@Url.Action("RequestTeacher", "Teachers")">
+                            <a href="@Url.Action()">
                                 <i class="bi bi-circle"></i><span>Registrar Vehículos</span>
                             </a>
                         </li>
 
 
                         <li>
-                            <a href="@Url.Action("RequestTeachersSchedules", "Teachers")">
+                            <a href="@Url.Action("VerCarros", "Carros")">
                                 <i class="bi bi-circle"></i><span>Ver Vehículos</span>
                             </a>
                         </li>
